--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -7,9 +7,10 @@
  */
 
 @import "~bootstrap";
+
 @import "variables";
 
-#app {
+.app {
 	height:      100vh;
 	font-family: "Roboto", sans-serif !important;
 	font-weight: 100 !important;
